--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+turnkey-zurmo-14.0 (1) turnkey; urgency=low
+
+  * Upgraded to latest upstream version of Zurmo (3.0.4.d7793a66e661)
+
+  * Replaced PHPMyAdmin with Adminer
+
+  * Hardened default SSL settings
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Fri, 04 Sept 2015 13:18:23 +1000
+
 turnkey-zurmo-13.0 (1) turnkey; urgency=low
 
   * Zurmo:
@@ -31,10 +44,6 @@ turnkey-zurmo-12.1 (1) turnkey; urgency=low
 
     zurmo-stable    1.1.31.658d8cfa5c16 (i386)
                     1.5.14.67bf4e0edaaa (amd64)
-
-  * Replaced PHPMyAdmin with Adminer
-
-  * Hardened default SSL settings
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
