--- a/changelog
+++ b/changelog
@@ -1,3 +1,15 @@
+turnkey-zurmo-14.1 (1) turnkey; urgency=low
+
+  * Installed security updates.
+
+  * Installed updated packages from TurnKey repo
+      - includes relevant Webmin packages (v1.780)
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Tue, 01 Mar 2016 04:40:34 +0000
+
 turnkey-zurmo-14.0 (1) turnkey; urgency=low
 
   * Upgraded to latest upstream version of Zurmo (3.0.5.cf746baa61be)
