--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+turnkey-zurmo-14.1 (2) turnkey; urgency=low
+
+  * Upgraded to latest upstream version of Zurmo (3.1.1.7b482704bc58)
+
+ -- Stefan Davis <nafets.sivad@gmail.com>  Thu, 07 Apr 2016 03:33:28 +1000
+
 turnkey-zurmo-14.1 (1) turnkey; urgency=low
 
   * Installed security updates.
