--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+turnkey-zurmo-14.2 (1) turnkey; urgency=low
+
+  * Upgraded to latest upstream version of Zurmo (3.1.5.a5a46793e4a5)
+
+  * Installed security updates.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Anton Pyrogovskyi <anton@turnkeylinux.org>  Sun, 13 Nov 2016 19:51:11 +0000
+
 turnkey-zurmo-14.1 (1) turnkey; urgency=low
 
   * Upgraded to latest upstream version of Zurmo (3.1.1.7b482704bc58)
