--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+turnkey-zurmo-15.0 (1) turnkey; urgency=low
+
+  * Upgraded to latest upstream version of Zurmo (3.2.3.74732d3df221)
+
+  * Install Adminer directly from stretch/main repo
+
+  * Replace MySQL with MariaDB
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific tot his appliance.
+
+ -- Stefan Davis <stefan@turnkeylinux.org>  Tue, 12 Dec 2017 21:58:43 +1100
+
 turnkey-zurmo-14.2 (1) turnkey; urgency=low
 
   * Upgraded to latest upstream version of Zurmo (3.2.1.57987acc3018)
