--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+turnkey-zurmo-15.2 (1) turnkey; urgency=low
+
+  * Upgraded to latest upstream version of Zurmo (3.2.5.d5d5f53cc259).
+
+  * Rebuild to resolve inadvertent removal of mariadb during sec-updates
+    - part of #1246.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 22 Nov 2018 16:16:27 +1100
+
 turnkey-zurmo-15.1 (1) turnkey; urgency=low
 
   * Include missing dependency php-xml - closes #1206.
